kb8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-app-service
spec:
  selector:
    app: payment-app
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
